# financial-tracker

./: .gitignore  README.md  pyproject.toml
financial_tracker/: keywords.py  keywords_example.py  tracker.py
financial_tracker/data/: Steblik_Finance.csv  steblik_finance.csv
financial_tracker/data/barclays/: data 2.csv  data05-24.csv  data1.csv  data3.csv  data4.csv
financial_tracker/data/mbna/: 4129854013888811_20240419_2200 (1).csv  4129854013888811_20240419_2200.csv  4129854013888811_20240419_2201.csv  4129854013888811_20240419_2202.csv  4129854013888811_20240419_2203 (1).csv  4129854013888811_20240419_2203.csv  4129854013888811_20240609_1046.csv  4129854013888811_20240609_1048.csv
financial_tracker/db/: load_finance_postgres.py
src/db/: load_to_aws.py  load_to_pg.py
src/financial_tracker/: main.py  tracker.py
src/financial_tracker/models/: pipeline.py
src/utils/: config.py  mapping.py
tests/: tests.py
