[tool.poetry]
name = "financial-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
config = "^0.5.1"
streamlit = "^1.35.0"
boto3 = "^1.34.122"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
